gcc/testsuite/rust.test/compilable/forward_decl_3.rs
fn main() {
    let struct_test = Foo { one: 1, two: 2 };
}

struct Foo {
    one: i32,
    two: i32,
}
