gcc/testsuite/rust.test/fail_compilation/redef_error5.rs
struct Foo(i32, bool);

impl Foo {
    const TEST: i32 = 123;
    const TEST: bool = false;
}

fn main() {}
